Fix EZP-22124: inline image alignment is not respected (cherry picked from commit e39c139fa7cb6c458039db22f3e4f30ce2523e9f)

--- a/packages/ezflow_extension/ezextension/ezflow/design/ezflow/stylesheets/core.css
+++ b/packages/ezflow_extension/ezextension/ezflow/design/ezflow/stylesheets/core.css
@@ -495,6 +495,16 @@ div.object-right, table.object-right /* Used for floating images and other conte
     clear: right;
 }
 
+.embed-inline-left
+{
+    float: left;
+}
+
+.embed-inline-right
+{
+    float: right;
+}
+
 div.object-center, table.object-center
 {
     margin: 0.25em auto 0.25em auto;
